syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;
option go_package = "grpc_with_go/chap_05/proto/metadata";

service OrderManagement {
    rpc getOrder (google.protobuf.StringValue) returns (Order);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price  = 4;
    string destination = 5;
}



